# stockpulse

./: .gitignore  Claude.md  README.md
.claude/agent-memory/backend-agent/: sprint2-learnings.md
.claude/agent-memory/frontend-agent/: sprint2-learnings.md
.claude/agents/: ai-integration-agent.md  backend-agent.md  devops-agent.md  frontend-agent.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: alerts.py  auth.py  insights.py  portfolio.py  router.py  stocks.py  watchlist.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  alert.py  portfolio.py  user.py  watchlist.py
backend/app/schemas/: alert.py  common.py  insights.py  portfolio.py  stock.py  user.py  watchlist.py
backend/app/services/: alert_service.py  claude_service.py  market_service.py  portfolio_service.py
backend/tests/: conftest.py  test_auth.py  test_insights.py  test_portfolio.py  test_stocks.py
docs/: architecture.md  decision-log.md
docs/api-contracts/: README.md
frontend/: .env.example  .eslintrc.json  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  (+1 more)
prompts/: CHANGELOG.md
prompts/few-shot/: suggestion-examples.json  trend-examples.json
prompts/system/: suggestion-engine.v1.md  trend-explainer.v1.md
(+17 files in other folders)
